# boilerplate

fastapi_mysql/: Dockerfile  README.md  TODO.md  alembic.ini  poetry-2.1.3-py3-none-any.whl  pyproject.toml  pytest.ini
fastapi_mysql/migrations/: env.py
fastapi_mysql/migrations/versions/: 2025_06_10_1042-4bd59394fc97_add_user_table.py
fastapi_mysql/src/: main.py
fastapi_mysql/src/application/service/: validate_service.py
fastapi_mysql/src/application/user/: create_user.py  delete_user.py  get_list_users.py  login.py
fastapi_mysql/src/common/: context_store.py  dto.py  except_handler.py  models.py  repository.py
fastapi_mysql/src/configs/: __init__.py  jwt_setting.py  mongo_setting.py  mysql_setting.py
fastapi_mysql/src/containers/: __init__.py  infra_container.py  log_container.py  middleware_container.py  repository_container.py  service_container.py  user_app_container.py  utils_container.py
fastapi_mysql/src/database/: README.md  mongo.py  mysql.py
fastapi_mysql/src/domain/user/: exceptions.py  user.py  user_repo.py
fastapi_mysql/src/infra/: models.py
fastapi_mysql/src/infra/user/: user.py  user_mapper.py  user_repo_impl.py
fastapi_mysql/src/interface/dependency/: auth.py  db_session.py
fastapi_mysql/src/interface/user/: user_dto.py  user_mapper.py  user_router.py
fastapi_mysql/src/logs/: log_factory.py  log_handler.py  log_wrapper.py
fastapi_mysql/src/middleware/: __init__.py  auth_middleware.py  db_session_middleware.py  session_middleware.py
fastapi_mysql/src/utils/: crypto.py  jwt.py
(+6 files in other folders)
